--- a/google-homepage/style.css
+++ b/google-homepage/style.css
@@ -31,6 +31,11 @@ li:hover {
     text-decoration: underline;
 }
 
+a {
+    text-decoration: none;
+    color: #5F6368;
+}
+
 button {
     border: 1px solid #f2f2f2;
     padding: .7em 1em;
